--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SITE_NAME_HEADER=Amasia
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://amasia-one.vercel.app/
+SITE_BASE_URL=https://amasia.fourth.one/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
